...
    <string name="surname_hint">Your last name</string>
    <string name="save">Save</string>
    <string name="your_parish">Your parish</string>
    <string name="your_phone">Your phone number:</string>
    <string name="your_last_name">Your last name</string>
    <string name="your_first_name">Your first name</string>
    <string name="praise_god">Praise God</string>
    <string name="quick_offering">Quick offering</string>
    <string name="custom_offering">Custom offering</string>
    <string name="button_user_form">Profile</string>
    <string name="button_payment">Payment</string>
    <string name="dark_mode">Release Evil</string>
    <string name="settings">Settings</string>
...
